src/pages/PhotoCapturePage/PhotoCapturePage.module.css
.wrapper {
  width: 342px;
  /* height: 660px; */
  /* height: 100%; */
  flex-grow: 1;
  min-height: 0;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  margin-left: auto;
  margin-right: auto;
  gap: 14px;
}

.photoSectionWrapper {
  /* height: 477px; */
  flex-grow: 1;
  min-height: 130px;
  /* max-height: 580px;
  max-height: 72.139vh; */
  width: 100%;
  display: grid;
  grid-template-columns: 161px 161px;
  grid-auto-rows: 130px;
  gap: 10px;
  overflow-y: auto;
  overflow-x: hidden;
}

.photoSectionWrapper::-webkit-scrollbar {
  width: 4px;
  padding-top: 4px;
  /* height: 477px; */
}

.photoSectionWrapper::-webkit-scrollbar-track {
  background-color: var(--bg);
  border-radius: 4px;
}

.photoSectionWrapper::-webkit-scrollbar-thumb {
  background-color: var(--main-gray);
  border-radius: 4px;
}

.photoWrapper {
  position: relative;
  width: 161px;
  height: 130px;
  overflow: hidden;

  border-radius: 14px;
  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
}

.deleteBtn {
  position: absolute;
  width: 29px;
  height: 29px;
  border: none;
  border-radius: 52px;
  background: var(--red);
  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
  display: flex;
  align-items: center;
  justify-content: center;
  right: 0;
  bottom: 0;
  cursor: pointer;
}

.deleteBtnIcon {
  width: 18px;
  height: 18px;
}

.video {
  /* height: 477px; */
  width: 100%;
  height: 66.169vh;
}

.photo {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.btnsWrapper {
  /* display: flex;
  justify-content: space-between; */
  max-width: 318px;
  width: 100%;
  padding: 1.24vh 21px;
  display: grid;
  gap: 18px;
  margin-left: auto;
  margin-right: auto;
  grid-template-columns: 1fr auto 1fr;
  align-items: end;
  /* margin-top: auto; */
}

.cameraOn {
  justify-content: flex-start;
  gap: 20px;
}

.cross {
  fill: var(--bg-secondary);
}

.cancelBtn {
  max-width: 70px;
  max-height: 70px;
  width: 8.706vh;
  height: 8.706vh;
  border: none;
  border-radius: 50%;
  background-color: var(--red);
}

.cameraBtn {
  width: 12.438vh;
  height: 12.438vh;
  max-width: 100px;
  max-height: 100px;
  border: none;
  border-radius: 145px;
  background-color: var(--light-gray);
  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
}

.cameraIcon {
  width: 54px;
  height: 43px;
}

.acceptBtn {
  max-width: 70px;
  max-height: 70px;
  width: 8.706vh;
  height: 8.706vh;
  border: none;
  border-radius: 50%;
  background-color: var(--green-btn-normal);
}

.check {
  fill: var(--bg-secondary);
}

.photoPreviewWrapper {
  position: relative;
  width: 70px;
  height: 70px;
  border-radius: 14px;
  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
  overflow: hidden;
  
}

.photoPreview {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.photoQuantity {
  position: absolute;
  width: 29px;
  height: 29px;
  border-radius: 52px;
  background: var(--red);
  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
  display: flex;
  align-items: center;
  justify-content: center;
  right: 0;
  top: 0;
}

